# big-data-gruppenprojekt

./: LICENSE  README.md  pyproject.toml
gruppenprojekt/: Hybrid_Recommender.py  collaborative_filtering_recommender.py  content_baed_recommender.py  content_based_recommender.py  deep_learning_recommender.py  gruppenprojekt_recommender.ipynb  hybrid_Recommender.py  mae_tester.py  main.py  recommender.py  user_based_recommender.py
gruppenprojekt/data/: Bewertungsmatrix_FlixNet.csv  Itemprofile_FlixNet.csv  Ratings_FlixNet.csv  Testdaten_FlixNet.csv
gruppenprojekt/notebook/: gruppenprojekt_recommender_flixnet.ipynb
gruppenprojekt/outputs/: testergebnis_2025-06-04 16-42-49.json  testergebnis_2025-06-06 21-18-19.json
